// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`normalizeOptions client host and port should set correct options 1`] = `
Object {
  "client": Object {
    "host": "my.host",
    "path": "/ws",
    "port": 9000,
  },
  "dev": Object {},
  "firewall": true,
  "hot": true,
  "liveReload": true,
  "static": Array [
    Object {
      "directory": "CWD",
      "publicPath": Array [
        "/",
      ],
      "serveIndex": Object {
        "icons": true,
      },
      "staticOptions": Object {},
      "watch": Object {},
    },
  ],
  "transportMode": Object {
    "client": "ws",
    "server": "ws",
  },
}
`;

exports[`normalizeOptions client path should set correct options 1`] = `
Object {
  "client": Object {
    "path": "/custom/path",
  },
  "dev": Object {},
  "firewall": true,
  "hot": true,
  "liveReload": true,
  "static": Array [
    Object {
      "directory": "CWD",
      "publicPath": Array [
        "/",
      ],
      "serveIndex": Object {
        "icons": true,
      },
      "staticOptions": Object {},
      "watch": Object {},
    },
  ],
  "transportMode": Object {
    "client": "ws",
    "server": "ws",
  },
}
`;

exports[`normalizeOptions client path without leading/ending slashes should set correct options 1`] = `
Object {
  "client": Object {
    "path": "/custom/path",
  },
  "dev": Object {},
  "firewall": true,
  "hot": true,
  "liveReload": true,
  "static": Array [
    Object {
      "directory": "CWD",
      "publicPath": Array [
        "/",
      ],
      "serveIndex": Object {
        "icons": true,
      },
      "staticOptions": Object {},
      "watch": Object {},
    },
  ],
  "transportMode": Object {
    "client": "ws",
    "server": "ws",
  },
}
`;

exports[`normalizeOptions dev is set should set correct options 1`] = `
Object {
  "client": Object {
    "path": "/ws",
  },
  "dev": Object {
    "serverSideRender": true,
  },
  "firewall": true,
  "hot": true,
  "liveReload": true,
  "static": Array [
    Object {
      "directory": "CWD",
      "publicPath": Array [
        "/",
      ],
      "serveIndex": Object {
        "icons": true,
      },
      "staticOptions": Object {},
      "watch": Object {},
    },
  ],
  "transportMode": Object {
    "client": "ws",
    "server": "ws",
  },
}
`;

exports[`normalizeOptions firewall is set should set correct options 1`] = `
Object {
  "client": Object {
    "path": "/ws",
  },
  "dev": Object {},
  "firewall": false,
  "hot": true,
  "liveReload": true,
  "static": Array [
    Object {
      "directory": "CWD",
      "publicPath": Array [
        "/",
      ],
      "serveIndex": Object {
        "icons": true,
      },
      "staticOptions": Object {},
      "watch": Object {},
    },
  ],
  "transportMode": Object {
    "client": "ws",
    "server": "ws",
  },
}
`;

exports[`normalizeOptions hot is false should set correct options 1`] = `
Object {
  "client": Object {
    "path": "/ws",
  },
  "dev": Object {},
  "firewall": true,
  "hot": false,
  "liveReload": true,
  "static": Array [
    Object {
      "directory": "CWD",
      "publicPath": Array [
        "/",
      ],
      "serveIndex": Object {
        "icons": true,
      },
      "staticOptions": Object {},
      "watch": Object {},
    },
  ],
  "transportMode": Object {
    "client": "ws",
    "server": "ws",
  },
}
`;

exports[`normalizeOptions hot is only should set correct options 1`] = `
Object {
  "client": Object {
    "path": "/ws",
  },
  "dev": Object {},
  "firewall": true,
  "hot": "only",
  "liveReload": true,
  "static": Array [
    Object {
      "directory": "CWD",
      "publicPath": Array [
        "/",
      ],
      "serveIndex": Object {
        "icons": true,
      },
      "staticOptions": Object {},
      "watch": Object {},
    },
  ],
  "transportMode": Object {
    "client": "ws",
    "server": "ws",
  },
}
`;

exports[`normalizeOptions hot is true should set correct options 1`] = `
Object {
  "client": Object {
    "path": "/ws",
  },
  "dev": Object {},
  "firewall": true,
  "hot": true,
  "liveReload": true,
  "static": Array [
    Object {
      "directory": "CWD",
      "publicPath": Array [
        "/",
      ],
      "serveIndex": Object {
        "icons": true,
      },
      "staticOptions": Object {},
      "watch": Object {},
    },
  ],
  "transportMode": Object {
    "client": "ws",
    "server": "ws",
  },
}
`;

exports[`normalizeOptions liveReload is false should set correct options 1`] = `
Object {
  "client": Object {
    "path": "/ws",
  },
  "dev": Object {},
  "firewall": true,
  "hot": true,
  "liveReload": false,
  "static": Array [
    Object {
      "directory": "CWD",
      "publicPath": Array [
        "/",
      ],
      "serveIndex": Object {
        "icons": true,
      },
      "staticOptions": Object {},
      "watch": Object {},
    },
  ],
  "transportMode": Object {
    "client": "ws",
    "server": "ws",
  },
}
`;

exports[`normalizeOptions liveReload is true should set correct options 1`] = `
Object {
  "client": Object {
    "path": "/ws",
  },
  "dev": Object {},
  "firewall": true,
  "hot": true,
  "liveReload": true,
  "static": Array [
    Object {
      "directory": "CWD",
      "publicPath": Array [
        "/",
      ],
      "serveIndex": Object {
        "icons": true,
      },
      "staticOptions": Object {},
      "watch": Object {},
    },
  ],
  "transportMode": Object {
    "client": "ws",
    "server": "ws",
  },
}
`;

exports[`normalizeOptions multi compiler watchOptions is set should set correct options 1`] = `
Object {
  "client": Object {
    "path": "/ws",
  },
  "dev": Object {},
  "firewall": true,
  "hot": true,
  "liveReload": true,
  "static": Array [
    Object {
      "directory": "CWD",
      "publicPath": Array [
        "/",
      ],
      "serveIndex": Object {
        "icons": true,
      },
      "staticOptions": Object {},
      "watch": Object {
        "aggregateTimeout": 300,
      },
    },
  ],
  "transportMode": Object {
    "client": "ws",
    "server": "ws",
  },
}
`;

exports[`normalizeOptions no options should set correct options 1`] = `
Object {
  "client": Object {
    "path": "/ws",
  },
  "dev": Object {},
  "firewall": true,
  "hot": true,
  "liveReload": true,
  "static": Array [
    Object {
      "directory": "CWD",
      "publicPath": Array [
        "/",
      ],
      "serveIndex": Object {
        "icons": true,
      },
      "staticOptions": Object {},
      "watch": Object {},
    },
  ],
  "transportMode": Object {
    "client": "ws",
    "server": "ws",
  },
}
`;

exports[`normalizeOptions single compiler watchOptions is object should set correct options 1`] = `
Object {
  "client": Object {
    "path": "/ws",
  },
  "dev": Object {},
  "firewall": true,
  "hot": true,
  "liveReload": true,
  "static": Array [
    Object {
      "directory": "CWD",
      "publicPath": Array [
        "/",
      ],
      "serveIndex": Object {
        "icons": true,
      },
      "staticOptions": Object {},
      "watch": Object {
        "aggregateTimeout": 300,
      },
    },
  ],
  "transportMode": Object {
    "client": "ws",
    "server": "ws",
  },
}
`;

exports[`normalizeOptions single compiler watchOptions is object with static watch overriding it should set correct options 1`] = `
Object {
  "client": Object {
    "path": "/ws",
  },
  "dev": Object {},
  "firewall": true,
  "hot": true,
  "liveReload": true,
  "static": Array [
    Object {
      "directory": "CWD",
      "publicPath": Array [
        "/",
      ],
      "serveIndex": Object {
        "icons": true,
      },
      "staticOptions": Object {},
      "watch": Object {
        "poll": 500,
      },
    },
  ],
  "transportMode": Object {
    "client": "ws",
    "server": "ws",
  },
}
`;

exports[`normalizeOptions single compiler watchOptions is object with static watch true should set correct options 1`] = `
Object {
  "client": Object {
    "path": "/ws",
  },
  "dev": Object {},
  "firewall": true,
  "hot": true,
  "liveReload": true,
  "static": Array [
    Object {
      "directory": "CWD",
      "publicPath": Array [
        "/",
      ],
      "serveIndex": Object {
        "icons": true,
      },
      "staticOptions": Object {},
      "watch": Object {
        "aggregateTimeout": 300,
      },
    },
  ],
  "transportMode": Object {
    "client": "ws",
    "server": "ws",
  },
}
`;

exports[`normalizeOptions single compiler watchOptions is object with watch false should set correct options 1`] = `
Object {
  "client": Object {
    "path": "/ws",
  },
  "dev": Object {},
  "firewall": true,
  "hot": true,
  "liveReload": true,
  "static": Array [
    Object {
      "directory": "CWD",
      "publicPath": Array [
        "/",
      ],
      "serveIndex": Object {
        "icons": true,
      },
      "staticOptions": Object {},
      "watch": Object {},
    },
  ],
  "transportMode": Object {
    "client": "ws",
    "server": "ws",
  },
}
`;

exports[`normalizeOptions static is an array of static objects should set correct options 1`] = `
Object {
  "client": Object {
    "path": "/ws",
  },
  "dev": Object {},
  "firewall": true,
  "hot": true,
  "liveReload": true,
  "static": Array [
    Object {
      "directory": "/static/path1",
      "publicPath": Array [
        "/",
      ],
      "serveIndex": Object {
        "icons": true,
      },
      "staticOptions": Object {},
      "watch": Object {},
    },
    Object {
      "directory": "CWD",
      "publicPath": Array [
        "/static/public/path",
      ],
      "serveIndex": Object {
        "icons": true,
      },
      "staticOptions": Object {},
      "watch": Object {},
    },
  ],
  "transportMode": Object {
    "client": "ws",
    "server": "ws",
  },
}
`;

exports[`normalizeOptions static is an array of strings and static objects should set correct options 1`] = `
Object {
  "client": Object {
    "path": "/ws",
  },
  "dev": Object {},
  "firewall": true,
  "hot": true,
  "liveReload": true,
  "static": Array [
    Object {
      "directory": "/static/path1",
      "publicPath": Array [
        "/",
      ],
      "serveIndex": Object {
        "icons": true,
      },
      "staticOptions": Object {},
      "watch": Object {},
    },
    Object {
      "directory": "CWD",
      "publicPath": Array [
        "/static/public/path/",
      ],
      "serveIndex": Object {
        "icons": true,
      },
      "staticOptions": Object {},
      "watch": Object {},
    },
  ],
  "transportMode": Object {
    "client": "ws",
    "server": "ws",
  },
}
`;

exports[`normalizeOptions static is an array of strings should set correct options 1`] = `
Object {
  "client": Object {
    "path": "/ws",
  },
  "dev": Object {},
  "firewall": true,
  "hot": true,
  "liveReload": true,
  "static": Array [
    Object {
      "directory": "/static/path1",
      "publicPath": Array [
        "/",
      ],
      "serveIndex": Object {
        "icons": true,
      },
      "staticOptions": Object {},
      "watch": Object {},
    },
    Object {
      "directory": "/static/path2",
      "publicPath": Array [
        "/",
      ],
      "serveIndex": Object {
        "icons": true,
      },
      "staticOptions": Object {},
      "watch": Object {},
    },
  ],
  "transportMode": Object {
    "client": "ws",
    "server": "ws",
  },
}
`;

exports[`normalizeOptions static is an object should set correct options 1`] = `
Object {
  "client": Object {
    "path": "/ws",
  },
  "dev": Object {},
  "firewall": true,
  "hot": true,
  "liveReload": true,
  "static": Array [
    Object {
      "directory": "/static/path",
      "publicPath": Array [
        "/",
      ],
      "serveIndex": Object {
        "icons": true,
      },
      "staticOptions": Object {},
      "watch": Object {},
    },
  ],
  "transportMode": Object {
    "client": "ws",
    "server": "ws",
  },
}
`;

exports[`normalizeOptions static is false should set correct options 1`] = `
Object {
  "client": Object {
    "path": "/ws",
  },
  "dev": Object {},
  "firewall": true,
  "hot": true,
  "liveReload": true,
  "static": false,
  "transportMode": Object {
    "client": "ws",
    "server": "ws",
  },
}
`;

exports[`normalizeOptions static is string should set correct options 1`] = `
Object {
  "client": Object {
    "path": "/ws",
  },
  "dev": Object {},
  "firewall": true,
  "hot": true,
  "liveReload": true,
  "static": Array [
    Object {
      "directory": "/static/path",
      "publicPath": Array [
        "/",
      ],
      "serveIndex": Object {
        "icons": true,
      },
      "staticOptions": Object {},
      "watch": Object {},
    },
  ],
  "transportMode": Object {
    "client": "ws",
    "server": "ws",
  },
}
`;

exports[`normalizeOptions static is true should set correct options 1`] = `
Object {
  "client": Object {
    "path": "/ws",
  },
  "dev": Object {},
  "firewall": true,
  "hot": true,
  "liveReload": true,
  "static": Array [
    Object {
      "directory": "CWD",
      "publicPath": Array [
        "/",
      ],
      "serveIndex": Object {
        "icons": true,
      },
      "staticOptions": Object {},
      "watch": Object {},
    },
  ],
  "transportMode": Object {
    "client": "ws",
    "server": "ws",
  },
}
`;

exports[`normalizeOptions static publicPath is a string should set correct options 1`] = `
Object {
  "client": Object {
    "path": "/ws",
  },
  "dev": Object {},
  "firewall": true,
  "hot": true,
  "liveReload": true,
  "static": Array [
    Object {
      "directory": "CWD",
      "publicPath": Array [
        "/static/public/path/",
      ],
      "serveIndex": Object {
        "icons": true,
      },
      "staticOptions": Object {},
      "watch": Object {},
    },
  ],
  "transportMode": Object {
    "client": "ws",
    "server": "ws",
  },
}
`;

exports[`normalizeOptions static publicPath is an array should set correct options 1`] = `
Object {
  "client": Object {
    "path": "/ws",
  },
  "dev": Object {},
  "firewall": true,
  "hot": true,
  "liveReload": true,
  "static": Array [
    Object {
      "directory": "CWD",
      "publicPath": Array [
        "/static/public/path1/",
        "/static/public/path2/",
      ],
      "serveIndex": Object {
        "icons": true,
      },
      "staticOptions": Object {},
      "watch": Object {},
    },
  ],
  "transportMode": Object {
    "client": "ws",
    "server": "ws",
  },
}
`;

exports[`normalizeOptions static serveIndex is an object should set correct options 1`] = `
Object {
  "client": Object {
    "path": "/ws",
  },
  "dev": Object {},
  "firewall": true,
  "hot": true,
  "liveReload": true,
  "static": Array [
    Object {
      "directory": "CWD",
      "publicPath": Array [
        "/",
      ],
      "serveIndex": Object {
        "icons": false,
      },
      "staticOptions": Object {},
      "watch": Object {},
    },
  ],
  "transportMode": Object {
    "client": "ws",
    "server": "ws",
  },
}
`;

exports[`normalizeOptions static serveIndex is false should set correct options 1`] = `
Object {
  "client": Object {
    "path": "/ws",
  },
  "dev": Object {},
  "firewall": true,
  "hot": true,
  "liveReload": true,
  "static": Array [
    Object {
      "directory": "CWD",
      "publicPath": Array [
        "/",
      ],
      "serveIndex": false,
      "staticOptions": Object {},
      "watch": Object {},
    },
  ],
  "transportMode": Object {
    "client": "ws",
    "server": "ws",
  },
}
`;

exports[`normalizeOptions static serveIndex is true should set correct options 1`] = `
Object {
  "client": Object {
    "path": "/ws",
  },
  "dev": Object {},
  "firewall": true,
  "hot": true,
  "liveReload": true,
  "static": Array [
    Object {
      "directory": "CWD",
      "publicPath": Array [
        "/",
      ],
      "serveIndex": Object {
        "icons": true,
      },
      "staticOptions": Object {},
      "watch": Object {},
    },
  ],
  "transportMode": Object {
    "client": "ws",
    "server": "ws",
  },
}
`;

exports[`normalizeOptions static watch is an object should set correct options 1`] = `
Object {
  "client": Object {
    "path": "/ws",
  },
  "dev": Object {},
  "firewall": true,
  "hot": true,
  "liveReload": true,
  "static": Array [
    Object {
      "directory": "CWD",
      "publicPath": Array [
        "/",
      ],
      "serveIndex": Object {
        "icons": true,
      },
      "staticOptions": Object {},
      "watch": Object {
        "poll": 500,
      },
    },
  ],
  "transportMode": Object {
    "client": "ws",
    "server": "ws",
  },
}
`;

exports[`normalizeOptions static watch is false should set correct options 1`] = `
Object {
  "client": Object {
    "path": "/ws",
  },
  "dev": Object {},
  "firewall": true,
  "hot": true,
  "liveReload": true,
  "static": Array [
    Object {
      "directory": "CWD",
      "publicPath": Array [
        "/",
      ],
      "serveIndex": Object {
        "icons": true,
      },
      "staticOptions": Object {},
      "watch": false,
    },
  ],
  "transportMode": Object {
    "client": "ws",
    "server": "ws",
  },
}
`;

exports[`normalizeOptions static watch is true should set correct options 1`] = `
Object {
  "client": Object {
    "path": "/ws",
  },
  "dev": Object {},
  "firewall": true,
  "hot": true,
  "liveReload": true,
  "static": Array [
    Object {
      "directory": "CWD",
      "publicPath": Array [
        "/",
      ],
      "serveIndex": Object {
        "icons": true,
      },
      "staticOptions": Object {},
      "watch": Object {},
    },
  ],
  "transportMode": Object {
    "client": "ws",
    "server": "ws",
  },
}
`;

exports[`normalizeOptions transportMode custom client path should set correct options 1`] = `
Object {
  "client": Object {
    "path": "/ws",
  },
  "dev": Object {},
  "firewall": true,
  "hot": true,
  "liveReload": true,
  "static": Array [
    Object {
      "directory": "CWD",
      "publicPath": Array [
        "/",
      ],
      "serveIndex": Object {
        "icons": true,
      },
      "staticOptions": Object {},
      "watch": Object {},
    },
  ],
  "transportMode": Object {
    "client": "/path/to/custom/client/",
    "server": "ws",
  },
}
`;

exports[`normalizeOptions transportMode custom server class should set correct options 1`] = `
Object {
  "client": Object {
    "path": "/ws",
  },
  "dev": Object {},
  "firewall": true,
  "hot": true,
  "liveReload": true,
  "static": Array [
    Object {
      "directory": "CWD",
      "publicPath": Array [
        "/",
      ],
      "serveIndex": Object {
        "icons": true,
      },
      "staticOptions": Object {},
      "watch": Object {},
    },
  ],
  "transportMode": Object {
    "client": "ws",
    "server": [Function],
  },
}
`;

exports[`normalizeOptions transportMode custom server path should set correct options 1`] = `
Object {
  "client": Object {
    "path": "/ws",
  },
  "dev": Object {},
  "firewall": true,
  "hot": true,
  "liveReload": true,
  "static": Array [
    Object {
      "directory": "CWD",
      "publicPath": Array [
        "/",
      ],
      "serveIndex": Object {
        "icons": true,
      },
      "staticOptions": Object {},
      "watch": Object {},
    },
  ],
  "transportMode": Object {
    "client": "ws",
    "server": "/path/to/custom/server/",
  },
}
`;

exports[`normalizeOptions transportMode sockjs string should set correct options 1`] = `
Object {
  "client": Object {
    "path": "/ws",
  },
  "dev": Object {},
  "firewall": true,
  "hot": true,
  "liveReload": true,
  "static": Array [
    Object {
      "directory": "CWD",
      "publicPath": Array [
        "/",
      ],
      "serveIndex": Object {
        "icons": true,
      },
      "staticOptions": Object {},
      "watch": Object {},
    },
  ],
  "transportMode": Object {
    "client": "sockjs",
    "server": "sockjs",
  },
}
`;

exports[`normalizeOptions transportMode ws object should set correct options 1`] = `
Object {
  "client": Object {
    "path": "/ws",
  },
  "dev": Object {},
  "firewall": true,
  "hot": true,
  "liveReload": true,
  "static": Array [
    Object {
      "directory": "CWD",
      "publicPath": Array [
        "/",
      ],
      "serveIndex": Object {
        "icons": true,
      },
      "staticOptions": Object {},
      "watch": Object {},
    },
  ],
  "transportMode": Object {
    "client": "ws",
    "server": "ws",
  },
}
`;

exports[`normalizeOptions transportMode ws string should set correct options 1`] = `
Object {
  "client": Object {
    "path": "/ws",
  },
  "dev": Object {},
  "firewall": true,
  "hot": true,
  "liveReload": true,
  "static": Array [
    Object {
      "directory": "CWD",
      "publicPath": Array [
        "/",
      ],
      "serveIndex": Object {
        "icons": true,
      },
      "staticOptions": Object {},
      "watch": Object {},
    },
  ],
  "transportMode": Object {
    "client": "ws",
    "server": "ws",
  },
}
`;
